fix overflow

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -18,6 +18,7 @@ body {
     padding: 0;
     transition: all 1s;
     font-size: 10px;
+    overflow-x: hidden;
 }
 
 html {
